--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,11 +1,11 @@
 <resources>
-    <string name="app_name">SubSurveyPlus</string>
+    <string name="app_name">客流调查+</string>
 
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
     <string name="action_settings">Settings</string>
-    <string name="title_activity_login">登录</string>
+    <string name="title_activity_login">客流调查+</string>
 
     <!-- Strings related to login -->
     <string name="prompt_email">Email</string>
